[package]
name = "aoc2019"
version = "0.1.0"
authors = ["TehPers <tehperz@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
nom = "6"
itertools = "0.9"

[[bin]]
name = "y2019d01"
path = "src/day01/main.rs"

[[bin]]
name = "y2019d02"
path = "src/day02/main.rs"

[[bin]]
name = "y2019d03"
path = "src/day03/main.rs"

[[bin]]
name = "y2019d04"
path = "src/day04/main.rs"
